syntax = "proto3";

option java_package = "payment.paymentservice";
option java_outer_classname = "PaymentServiceProto";

package paymentservice;

service PaymentService {
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPaymentDetails (GetPaymentDetailsRequest) returns (GetPaymentDetailsResponse);
  rpc ListPayments (ListPaymentsRequest) returns (ListPaymentsResponse);
}

message ProcessPaymentRequest {
  string userId = 1;
  string carId = 2;
  double amount = 3;
  string paymentMethod = 4;
}

message ProcessPaymentResponse {
  bool success = 1;
  string message = 2;
  string transactionId = 3;
}

message GetPaymentDetailsRequest {
  string transactionId = 1;
}

message GetPaymentDetailsResponse {
  string transactionId = 1;
  string userId = 2;
  string carId = 3;
  double amount = 4;
  string paymentMethod = 5;
  string status = 6;
  string message = 7;
}

message ListPaymentsRequest {}

message ListPaymentsResponse {
  repeated GetPaymentDetailsResponse payments = 1;
}
