syntax = "proto3";

option csharp_namespace = "CarManagementService";

service CarService {
  rpc GetAllCars (Empty) returns (CarList);
  rpc GetCarByID (CarRequest) returns (Car);
  rpc AddCar (Car) returns (CarResponse);
  rpc UpdateCar (Car) returns (CarResponse);
  rpc DeleteCar (CarRequest) returns (CarResponse);
}

message Empty{}

message CarRequest {
  int32 car_id = 1;
}

message Car {
  int32 car_id = 1;
  int32 vin = 2;
  int32 yearproduced = 3;
  string model = 4;
  string color = 5;
  string altname = 6;
  int32 seats = 7;
  int32 carrange = 8;
  int32 locationhubref = 9;
}

message CarList {
  repeated Car cars = 1;
}

message CarResponse {
  bool success = 1;
  string message = 2;
}